# proofagent-sdk

./: LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  examples.md  index.md  python-sdk-guide.md  quickstart.md
examples/: e2e_judge_led.py  e2e_log_based.py  judge_led_quickstart.py  log_based_evaluation.py  report_helpers.py
notebooks/: colab_judge_led.ipynb  colab_log_based.ipynb  langgraph_react_itops_judge.ipynb  log_based_e2e.ipynb  simple_e2e.ipynb
notebooks/.ipynb_checkpoints/: colab_judge_led-checkpoint.ipynb  colab_log_based-checkpoint.ipynb  langgraph_react_itops_judge-checkpoint.ipynb  log_based_e2e-checkpoint.ipynb  simple_e2e-checkpoint.ipynb
src/proofagent/: __init__.py  cli.py  client.py  config.py  evaluation.py  project_support.py  proof_agent.py  report_display.py  tested_agent.py
src/proofagent_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_config.py  test_evaluation.py  test_project_support.py
